exports[`insertAfter() [individual]!name 1`] = `
Object {
  "context": Object {
    "domain": <DOMAIN>,
    "hasInvalidType": false,
    "prev": "<PREV CONTEXT>",
    "scope": "<SCOPE [empty]>",
    "title": null,
    "type": Object {
      "card": null,
      "domain": <DOMAIN>,
      "name": "void",
    },
  },
  "name": "pipeline",
  "pipeline": Array [
    Object {
      "context": Object {
        "domain": <DOMAIN>,
        "hasInvalidType": false,
        "prev": "<PREV CONTEXT>",
        "scope": "<SCOPE [empty]>",
        "title": null,
        "type": Object {
          "card": null,
          "domain": <DOMAIN>,
          "name": "void",
        },
      },
      "name": "here",
    },
    Object {
      "context": Object {
        "domain": <DOMAIN>,
        "hasInvalidType": false,
        "prev": "<PREV CONTEXT>",
        "scope": "<SCOPE [empty]>",
        "title": null,
        "type": Object {
          "card": null,
          "domain": <DOMAIN>,
          "name": "void",
        },
      },
      "name": "navigate",
      "path": "individual",
      "regular": false,
    },
    Object {
      "context": Object {
        "domain": <DOMAIN>,
        "hasInvalidType": false,
        "prev": "<PREV CONTEXT>",
        "scope": "<SCOPE [empty]>",
        "title": null,
        "type": Object {
          "card": null,
          "domain": <DOMAIN>,
          "name": "void",
        },
      },
      "name": "navigate",
      "path": "name",
      "regular": false,
    },
  ],
}
`;

exports[`insertAfter() individual!name 1`] = `
Object {
  "context": Object {
    "domain": <DOMAIN>,
    "hasInvalidType": false,
    "prev": "<PREV CONTEXT>",
    "scope": "<SCOPE [empty]>",
    "title": null,
    "type": Object {
      "card": null,
      "domain": <DOMAIN>,
      "name": "void",
    },
  },
  "name": "pipeline",
  "pipeline": Array [
    Object {
      "context": Object {
        "domain": <DOMAIN>,
        "hasInvalidType": false,
        "prev": "<PREV CONTEXT>",
        "scope": "<SCOPE [empty]>",
        "title": null,
        "type": Object {
          "card": null,
          "domain": <DOMAIN>,
          "name": "void",
        },
      },
      "name": "here",
    },
    Object {
      "context": Object {
        "domain": <DOMAIN>,
        "hasInvalidType": false,
        "prev": "<PREV CONTEXT>",
        "scope": "<SCOPE [empty]>",
        "title": null,
        "type": Object {
          "card": null,
          "domain": <DOMAIN>,
          "name": "void",
        },
      },
      "name": "navigate",
      "path": "individual",
      "regular": false,
    },
    Object {
      "context": Object {
        "domain": <DOMAIN>,
        "hasInvalidType": false,
        "prev": "<PREV CONTEXT>",
        "scope": "<SCOPE [empty]>",
        "title": null,
        "type": Object {
          "card": null,
          "domain": <DOMAIN>,
          "name": "void",
        },
      },
      "name": "navigate",
      "path": "name",
      "regular": false,
    },
  ],
}
`;

exports[`insertAfter() individual!sample.name 1`] = `
Object {
  "context": Object {
    "domain": <DOMAIN>,
    "hasInvalidType": false,
    "prev": "<PREV CONTEXT>",
    "scope": "<SCOPE [empty]>",
    "title": null,
    "type": Object {
      "card": null,
      "domain": <DOMAIN>,
      "name": "void",
    },
  },
  "name": "pipeline",
  "pipeline": Array [
    Object {
      "context": Object {
        "domain": <DOMAIN>,
        "hasInvalidType": false,
        "prev": "<PREV CONTEXT>",
        "scope": "<SCOPE [empty]>",
        "title": null,
        "type": Object {
          "card": null,
          "domain": <DOMAIN>,
          "name": "void",
        },
      },
      "name": "here",
    },
    Object {
      "context": Object {
        "domain": <DOMAIN>,
        "hasInvalidType": false,
        "prev": "<PREV CONTEXT>",
        "scope": "<SCOPE [empty]>",
        "title": null,
        "type": Object {
          "card": null,
          "domain": <DOMAIN>,
          "name": "void",
        },
      },
      "name": "navigate",
      "path": "individual",
      "regular": false,
    },
    Object {
      "context": Object {
        "domain": <DOMAIN>,
        "hasInvalidType": false,
        "prev": "<PREV CONTEXT>",
        "scope": "<SCOPE [empty]>",
        "title": null,
        "type": Object {
          "card": null,
          "domain": <DOMAIN>,
          "name": "void",
        },
      },
      "name": "navigate",
      "path": "sample",
      "regular": false,
    },
    Object {
      "context": Object {
        "domain": <DOMAIN>,
        "hasInvalidType": false,
        "prev": "<PREV CONTEXT>",
        "scope": "<SCOPE [empty]>",
        "title": null,
        "type": Object {
          "card": null,
          "domain": <DOMAIN>,
          "name": "void",
        },
      },
      "name": "navigate",
      "path": "name",
      "regular": false,
    },
  ],
}
`;

exports[`insertAfter() individual.sample!name 1`] = `
Object {
  "context": Object {
    "domain": <DOMAIN>,
    "hasInvalidType": false,
    "prev": "<PREV CONTEXT>",
    "scope": "<SCOPE [empty]>",
    "title": null,
    "type": Object {
      "card": null,
      "domain": <DOMAIN>,
      "name": "void",
    },
  },
  "name": "pipeline",
  "pipeline": Array [
    Object {
      "context": Object {
        "domain": <DOMAIN>,
        "hasInvalidType": false,
        "prev": "<PREV CONTEXT>",
        "scope": "<SCOPE [empty]>",
        "title": null,
        "type": Object {
          "card": null,
          "domain": <DOMAIN>,
          "name": "void",
        },
      },
      "name": "here",
    },
    Object {
      "context": Object {
        "domain": <DOMAIN>,
        "hasInvalidType": false,
        "prev": "<PREV CONTEXT>",
        "scope": "<SCOPE [empty]>",
        "title": null,
        "type": Object {
          "card": null,
          "domain": <DOMAIN>,
          "name": "void",
        },
      },
      "name": "navigate",
      "path": "individual",
      "regular": false,
    },
    Object {
      "context": Object {
        "domain": <DOMAIN>,
        "hasInvalidType": false,
        "prev": "<PREV CONTEXT>",
        "scope": "<SCOPE [empty]>",
        "title": null,
        "type": Object {
          "card": null,
          "domain": <DOMAIN>,
          "name": "void",
        },
      },
      "name": "navigate",
      "path": "sample",
      "regular": false,
    },
    Object {
      "context": Object {
        "domain": <DOMAIN>,
        "hasInvalidType": false,
        "prev": "<PREV CONTEXT>",
        "scope": "<SCOPE [empty]>",
        "title": null,
        "type": Object {
          "card": null,
          "domain": <DOMAIN>,
          "name": "void",
        },
      },
      "name": "navigate",
      "path": "name",
      "regular": false,
    },
  ],
}
`;

exports[`insertAfter() individual:define(a = sample!name) 1`] = `
Object {
  "context": Object {
    "domain": <DOMAIN>,
    "hasInvalidType": false,
    "prev": "<PREV CONTEXT>",
    "scope": "<SCOPE [empty]>",
    "title": null,
    "type": Object {
      "card": null,
      "domain": <DOMAIN>,
      "name": "void",
    },
  },
  "name": "pipeline",
  "pipeline": Array [
    Object {
      "context": Object {
        "domain": <DOMAIN>,
        "hasInvalidType": false,
        "prev": "<PREV CONTEXT>",
        "scope": "<SCOPE [empty]>",
        "title": null,
        "type": Object {
          "card": null,
          "domain": <DOMAIN>,
          "name": "void",
        },
      },
      "name": "here",
    },
    Object {
      "context": Object {
        "domain": <DOMAIN>,
        "hasInvalidType": false,
        "prev": "<PREV CONTEXT>",
        "scope": "<SCOPE [empty]>",
        "title": null,
        "type": Object {
          "card": null,
          "domain": <DOMAIN>,
          "name": "void",
        },
      },
      "name": "navigate",
      "path": "individual",
      "regular": false,
    },
    Object {
      "binding": Object {
        "name": "a",
        "query": Object {
          "context": Object {
            "domain": <DOMAIN>,
            "hasInvalidType": false,
            "prev": "<PREV CONTEXT>",
            "scope": "<SCOPE [empty]>",
            "title": null,
            "type": Object {
              "card": null,
              "domain": <DOMAIN>,
              "name": "void",
            },
          },
          "name": "pipeline",
          "pipeline": Array [
            Object {
              "context": Object {
                "domain": <DOMAIN>,
                "hasInvalidType": false,
                "prev": "<PREV CONTEXT>",
                "scope": "<SCOPE [empty]>",
                "title": null,
                "type": Object {
                  "card": null,
                  "domain": <DOMAIN>,
                  "name": "void",
                },
              },
              "name": "navigate",
              "path": "sample",
              "regular": false,
            },
            Object {
              "context": Object {
                "domain": <DOMAIN>,
                "hasInvalidType": false,
                "prev": "<PREV CONTEXT>",
                "scope": "<SCOPE [empty]>",
                "title": null,
                "type": Object {
                  "card": null,
                  "domain": <DOMAIN>,
                  "name": "void",
                },
              },
              "name": "navigate",
              "path": "name",
              "regular": false,
            },
          ],
        },
      },
      "context": Object {
        "domain": <DOMAIN>,
        "hasInvalidType": false,
        "prev": "<PREV CONTEXT>",
        "scope": "<SCOPE [empty]>",
        "title": null,
        "type": Object {
          "card": null,
          "domain": <DOMAIN>,
          "name": "void",
        },
      },
      "name": "define",
    },
  ],
}
`;

exports[`removeAt() individual!.name 1`] = `
Object {
  "context": Object {
    "domain": <DOMAIN>,
    "hasInvalidType": false,
    "prev": "<PREV CONTEXT>",
    "scope": "<SCOPE [empty]>",
    "title": null,
    "type": Object {
      "card": null,
      "domain": <DOMAIN>,
      "name": "void",
    },
  },
  "name": "pipeline",
  "pipeline": Array [
    Object {
      "context": Object {
        "domain": <DOMAIN>,
        "hasInvalidType": false,
        "prev": "<PREV CONTEXT>",
        "scope": "<SCOPE [empty]>",
        "title": null,
        "type": Object {
          "card": null,
          "domain": <DOMAIN>,
          "name": "void",
        },
      },
      "name": "here",
    },
    Object {
      "context": Object {
        "domain": <DOMAIN>,
        "hasInvalidType": false,
        "prev": "<PREV CONTEXT>",
        "scope": "<SCOPE [empty]>",
        "title": null,
        "type": Object {
          "card": null,
          "domain": <DOMAIN>,
          "name": "void",
        },
      },
      "name": "navigate",
      "path": "name",
      "regular": false,
    },
  ],
}
`;

exports[`removeAt() individual.name! 1`] = `
Object {
  "context": Object {
    "domain": <DOMAIN>,
    "hasInvalidType": false,
    "prev": "<PREV CONTEXT>",
    "scope": "<SCOPE [empty]>",
    "title": null,
    "type": Object {
      "card": null,
      "domain": <DOMAIN>,
      "name": "void",
    },
  },
  "name": "pipeline",
  "pipeline": Array [
    Object {
      "context": Object {
        "domain": <DOMAIN>,
        "hasInvalidType": false,
        "prev": "<PREV CONTEXT>",
        "scope": "<SCOPE [empty]>",
        "title": null,
        "type": Object {
          "card": null,
          "domain": <DOMAIN>,
          "name": "void",
        },
      },
      "name": "here",
    },
    Object {
      "context": Object {
        "domain": <DOMAIN>,
        "hasInvalidType": false,
        "prev": "<PREV CONTEXT>",
        "scope": "<SCOPE [empty]>",
        "title": null,
        "type": Object {
          "card": null,
          "domain": <DOMAIN>,
          "name": "void",
        },
      },
      "name": "navigate",
      "path": "individual",
      "regular": false,
    },
  ],
}
`;

exports[`removeAt() individual:define(a := sample!) 1`] = `
Object {
  "context": Object {
    "domain": <DOMAIN>,
    "hasInvalidType": false,
    "prev": "<PREV CONTEXT>",
    "scope": "<SCOPE [empty]>",
    "title": null,
    "type": Object {
      "card": null,
      "domain": <DOMAIN>,
      "name": "void",
    },
  },
  "name": "pipeline",
  "pipeline": Array [
    Object {
      "context": Object {
        "domain": <DOMAIN>,
        "hasInvalidType": false,
        "prev": "<PREV CONTEXT>",
        "scope": "<SCOPE [empty]>",
        "title": null,
        "type": Object {
          "card": null,
          "domain": <DOMAIN>,
          "name": "void",
        },
      },
      "name": "here",
    },
    Object {
      "context": Object {
        "domain": <DOMAIN>,
        "hasInvalidType": false,
        "prev": "<PREV CONTEXT>",
        "scope": "<SCOPE [empty]>",
        "title": null,
        "type": Object {
          "card": null,
          "domain": <DOMAIN>,
          "name": "void",
        },
      },
      "name": "navigate",
      "path": "individual",
      "regular": false,
    },
  ],
}
`;

exports[`removeAt() individual:select(a = [sample!]) 1`] = `
Object {
  "context": Object {
    "domain": <DOMAIN>,
    "hasInvalidType": false,
    "prev": "<PREV CONTEXT>",
    "scope": "<SCOPE [empty]>",
    "title": null,
    "type": Object {
      "card": null,
      "domain": <DOMAIN>,
      "name": "void",
    },
  },
  "name": "pipeline",
  "pipeline": Array [
    Object {
      "context": Object {
        "domain": <DOMAIN>,
        "hasInvalidType": false,
        "prev": "<PREV CONTEXT>",
        "scope": "<SCOPE [empty]>",
        "title": null,
        "type": Object {
          "card": null,
          "domain": <DOMAIN>,
          "name": "void",
        },
      },
      "name": "here",
    },
    Object {
      "context": Object {
        "domain": <DOMAIN>,
        "hasInvalidType": false,
        "prev": "<PREV CONTEXT>",
        "scope": "<SCOPE [empty]>",
        "title": null,
        "type": Object {
          "card": null,
          "domain": <DOMAIN>,
          "name": "void",
        },
      },
      "name": "navigate",
      "path": "individual",
      "regular": false,
    },
  ],
}
`;

exports[`removeAt() individual:select(a = sample.name!) 1`] = `
Object {
  "context": Object {
    "domain": <DOMAIN>,
    "hasInvalidType": false,
    "prev": "<PREV CONTEXT>",
    "scope": "<SCOPE [empty]>",
    "title": null,
    "type": Object {
      "card": null,
      "domain": <DOMAIN>,
      "name": "void",
    },
  },
  "name": "pipeline",
  "pipeline": Array [
    Object {
      "context": Object {
        "domain": <DOMAIN>,
        "hasInvalidType": false,
        "prev": "<PREV CONTEXT>",
        "scope": "<SCOPE [empty]>",
        "title": null,
        "type": Object {
          "card": null,
          "domain": <DOMAIN>,
          "name": "void",
        },
      },
      "name": "here",
    },
    Object {
      "context": Object {
        "domain": <DOMAIN>,
        "hasInvalidType": false,
        "prev": "<PREV CONTEXT>",
        "scope": "<SCOPE [empty]>",
        "title": null,
        "type": Object {
          "card": null,
          "domain": <DOMAIN>,
          "name": "void",
        },
      },
      "name": "navigate",
      "path": "individual",
      "regular": false,
    },
  ],
}
`;

exports[`removeAt() individual:select(a = sample.name!, b = sample) 1`] = `
Object {
  "context": Object {
    "domain": <DOMAIN>,
    "hasInvalidType": false,
    "prev": "<PREV CONTEXT>",
    "scope": "<SCOPE [empty]>",
    "title": null,
    "type": Object {
      "card": null,
      "domain": <DOMAIN>,
      "name": "void",
    },
  },
  "name": "pipeline",
  "pipeline": Array [
    Object {
      "context": Object {
        "domain": <DOMAIN>,
        "hasInvalidType": false,
        "prev": "<PREV CONTEXT>",
        "scope": "<SCOPE [empty]>",
        "title": null,
        "type": Object {
          "card": null,
          "domain": <DOMAIN>,
          "name": "void",
        },
      },
      "name": "here",
    },
    Object {
      "context": Object {
        "domain": <DOMAIN>,
        "hasInvalidType": false,
        "prev": "<PREV CONTEXT>",
        "scope": "<SCOPE [empty]>",
        "title": null,
        "type": Object {
          "card": null,
          "domain": <DOMAIN>,
          "name": "void",
        },
      },
      "name": "navigate",
      "path": "individual",
      "regular": false,
    },
    Object {
      "context": Object {
        "domain": <DOMAIN>,
        "hasInvalidType": false,
        "prev": "<PREV CONTEXT>",
        "scope": "<SCOPE [empty]>",
        "title": null,
        "type": Object {
          "card": null,
          "domain": <DOMAIN>,
          "name": "void",
        },
      },
      "name": "select",
      "select": Object {
        "b": Object {
          "context": Object {
            "domain": <DOMAIN>,
            "hasInvalidType": false,
            "prev": "<PREV CONTEXT>",
            "scope": "<SCOPE [empty]>",
            "title": null,
            "type": Object {
              "card": null,
              "domain": <DOMAIN>,
              "name": "void",
            },
          },
          "name": "navigate",
          "path": "sample",
          "regular": false,
        },
      },
    },
  ],
}
`;
